--- a/package.json
+++ b/package.json
@@ -1,15 +1,40 @@
 {
-  "name": "sky-cli",
-  "version": "1.0.0",
-  "description": "cli tool",
-  "main": "index.js",
-  "dependencies": {
-    "commander": "^12.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "sky-cli",
+	"description": "An cli tool to help devs",
+	"version": "0.0.1",
+	"license": "UNLICENSED",
+	"type": "module",
+	"bin": {
+		"sky-cli": "index.js",
+		"start": "index.js"
+	},
+	"author": {
+		"name": "Leonardo Ennes",
+		"email": "leonardoennes@protonmail.com",
+		"url": "https://github.com/LeonardoEnnes/sky-cli"
+	},
+	"keywords": [
+		"sky-cli",
+		"Leonardo Ennes"
+	],
+	"files": [
+		"index.js",
+		"utils"
+	],
+	"scripts": {
+		"format": "prettier --write \"./**/*.{js,json}\""
+	},
+	"dependencies": {
+		"chalk": "^5.3.0",
+		"cli-alerts": "^2.0.0",
+		"cli-handle-error": "^4.4.0",
+		"cli-handle-unhandled": "^1.1.1",
+		"cli-meow-help": "^4.0.0",
+		"cli-welcome": "^3.0.0",
+		"get-package-json-file": "^2.0.0",
+		"meow": "^13.2.0"
+	},
+	"devDependencies": {
+		"prettier": "^3.3.3"
+	}
 }
