--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"format": "prettier --write \"./**/*.{js,json}\""
 	},
 	"dependencies": {
+		"axios": "^1.7.7",
 		"chalk": "^5.3.0",
 		"cli-alerts": "^2.0.0",
 		"cli-handle-error": "^4.4.0",
