--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"author": {
 		"name": "Leonardo Ennes",
-		"email": "leonardoennes@protonmail.com",
+		"email": "semEmail@protonmail.com",
 		"url": "https://github.com/LeonardoEnnes/sky-cli"
 	},
 	"keywords": [
@@ -32,6 +32,7 @@
 		"cli-handle-unhandled": "^1.1.1",
 		"cli-meow-help": "^4.0.0",
 		"cli-welcome": "^3.0.0",
+		"commander": "^12.1.0",
 		"figlet": "^1.7.0",
 		"get-package-json-file": "^2.0.0",
 		"meow": "^13.2.0"
