--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"cli-meow-help": "^4.0.0",
 		"cli-welcome": "^3.0.0",
 		"commander": "^12.1.0",
+		"diff": "^7.0.0",
 		"figlet": "^1.7.0",
 		"get-package-json-file": "^2.0.0",
 		"meow": "^13.2.0"
